src/test/test-models/bad/err-if-else.stan
transformed data {
  real y;
  if (1 y <- 2;
}
model {
}
